resolve bug:(Desktop) Alignments are not placed properly

--- a/app/src/pages/design/styles/CaptureScreen.scss
+++ b/app/src/pages/design/styles/CaptureScreen.scss
@@ -230,6 +230,7 @@
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
+  height: 8rem;
 }
 
 .card_modal {
@@ -262,7 +263,7 @@
   font-weight: 500;
   font-size: 14px;
   padding: 0 0.8rem;
-  top: 1rem;
+  top: 3%;
   cursor: pointer;
 }
 .disabled {
@@ -277,7 +278,7 @@
   font-family: 'Open Sans';
   font-size: 14px;
   padding: 0 0.8rem;
-  top: 1rem;
+  // top: 1rem;
 }
 
 // .upgrade_auto {
@@ -637,15 +638,25 @@
     font-size: 16px;
     font-family: 'Open sans';
     font-weight: bold;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: -1rem;
+    min-width: 13rem;
   }
 
   .info__btn_insprint {
     cursor: pointer;
     height: 11%;
-    width: 5%;
-    left: 5%;
+    width: 8%;
+    left: 93%;
     position: relative;
     bottom: 21%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    // margin-left: 12.1rem;
+    bottom: 0.6rem;
+    transform: translate(-50%, -50%);
   }
   .add_obj_insprint {
     .p-dialog-header {
@@ -667,25 +678,25 @@
   cursor: pointer;
 
   .insprint__text {
-    position: relative;
-    top: 0rem;
-    left: 4rem;
+    // position: relative;
+    // top: 0rem;
+    left: 3rem;
     font-size: 16px;
     font-family: "Open sans";
     font-weight: bold;
   }
 
   .upgrade_auto {
-    right: 1rem;
+    // right: 1rem;
     float: left;
-    padding-right: 2rem;
+    // padding-right: 2rem;
     position: relative;
     text-align: center;
     font-family: 'Open Sans';
     font-weight: 500;
     font-size: 14px;
     padding: 0 0.8rem;
-    top: 1rem;
+    top: 3%;
     cursor: pointer;
   }
   .disabled {
@@ -695,12 +706,23 @@
     opacity: 0.4;
   }
   .info__btn_upgrade {
-    bottom: 21%;
+    // bottom: 21%;
+    // cursor: pointer;
+    // height: 11%;
+    // left: 4%;
+    // position: relative;
+    // width: 4%;
     cursor: pointer;
     height: 11%;
-    left: 4%;
+    width: 5%;
+    left: 93%;
     position: relative;
-    width: 4%;
+    bottom: 21%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    bottom: 0.6rem;
+    transform: translate(-50%, -50%);
   }
   .add_obj_upgrade {
     .p-dialog-header {
@@ -764,14 +786,20 @@
     right: 1rem;
   }
   .add_obj_import{
-    position: relative;
-    right: 1rem;
-    top: 0.2rem;
+    // position: relative;
+    // right: 1rem;
+    // top: 0.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
   .add_obj_export{
-    position: relative;
-    right: 1rem;
-    top: 0.3rem;
+    // position: relative;
+    // right: 1rem;
+    // top: 0.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .imp__text {
@@ -786,13 +814,14 @@
   opacity: 0.4;
 
   .insprint__text {
-    position: relative;
+    // position: relative;
     top: 0rem;
     right: 1rem;
     font-size: 16px;
     font-family: "Open sans";
     cursor: not-allowed;
     font-weight: bold;
+    margin-right: 2rem
   }
 
   .insprint_auto {
@@ -804,9 +833,10 @@
     font-weight: 500;
     font-size: 14px;
     padding: 0 0.8rem;
-    top: 1rem;
+    top: 3%;
     right: 0.65rem;
     cursor: not-allowed;
+    left: 1rem;
   }
   .disabled {
     // float: left;
@@ -825,11 +855,21 @@
 
   .info__btn_utility {
     cursor: not-allowed;
+    // height: 11%;
+    // left: 23%;
+    // position: relative;
+    // bottom: 22%;
+    // width: 9%;
     height: 11%;
-    left: 23%;
-    position: relative;
-    bottom: 22%;
     width: 9%;
+    left: 93%;
+    position: relative;
+    bottom: 21%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    bottom: 0.6rem;
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -842,13 +882,14 @@
   cursor: pointer;
 
   .insprint__text {
-    position: relative;
+    // position: relative;
     top: 0rem;
     right: 1rem;
     font-size: 16px;
     font-family: "Open sans";
     cursor: pointer;
     font-weight: bold;
+    margin-right: 2rem;
   }
 
   .insprint_auto {
@@ -860,7 +901,7 @@
     font-weight: 500;
     font-size: 14px;
     padding: 0 0.8rem;
-    top: 1rem;
+    top: 3%;
     right: 0.65rem;
     cursor: pointer;
   }
@@ -876,16 +917,28 @@
     font-family: 'Open Sans';
     font-size: 14px;
     padding: 0 0.8rem;
-    top: 1rem;
+    // top: 1rem;
   }
 
   .info__btn_create {
-    bottom: 22%;
-    cursor: pointer;
+    // bottom: 22%;
+    // cursor: pointer;
+    // height: 11%;
+    // left: 9%;
+    // position: relative;
+    // width: 8%;
     height: 11%;
-    left: 9%;
+    width: 9%;
+    left: 93%;
     position: relative;
-    width: 8%;
+    bottom: 21%;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    // margin-left: 12.1rem;
+    bottom: 0.6rem;
+    transform: translate(-50%, -50%);
   }
   .map_obj {
     height: 4vh;
